fix: color issue in dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,6 +137,10 @@ body.dark-theme .main-bar .about-content {
   color: #A9A9A9;
 }
 
+body.dark-theme .service-history-card p {
+  color: #F7F7F7;
+}
+
 body.dark-theme .service-card-content h3 {
   color: #F7F7F7;
 }
